# shared/src/schemas/quantity.schema.ts
@@ -6,28 +6,29 @@ export const quantityUnitEnum = z.enum([
 
 const dec = z.number().nullish()
 const count = z.number().int().nullish()
+const str = z.string().nullish()
 
 export const quantityPebRoofSchema = z.object({
-  pebRoofValue: dec,
+  pebRoofValue: str,
   pebRoofQuantity: dec,
-  raftersAndColumns: dec,
+  raftersAndColumns: str,
   raftersAndColumnsQuantity: dec,
   lengthOfBuilding: dec,
-  lengthOfBuildingQuantity: dec,
+  lengthOfBuildingQuantity: str,
   inclinedLengthInOneHalf: dec,
   roofArea: dec,
   materialConsumption: dec,
   roofPurlinsValue: dec,
-  roofPurlins: dec,
+  roofPurlins: str,
   roofPurlinsQuantity: dec,
   lengthOfOnePurlin: dec,
-  lengthOfOnePurlinQuantity: dec,
+  lengthOfOnePurlinQuantity: str,
   noOfPurlinsInOneFrame: count,
   totalNoOfPurlinBay: count,
   unitWeightOfPurlin: dec,
   noOfExtendedFrame: count,
   noOfExtendedPurlinBay: count,
-  roofSheet: dec,
+  roofSheet: str,
   roofSheetQuantity: dec,
   roofSheetPurchaseQuantity: dec,
   extendedRoofWidth: dec,
@@ -37,18 +38,19 @@ export const quantityPebRoofSchema = z.object({
   polyCarbonateSheetQuantity: dec,
   polyCarbonateSheetPurchaseQuantity: dec,
   lengthOfpolyCarbonateSheet: dec,
-  lengthOfpolyCarbonateSheetAdditional: dec,
+  lengthOfpolyCarbonateSheetAdditional: str,
   widthOfpolyCarbonateSheet: dec,
   NosOfpolyCarbonateSheet: count,
   roofWindBracing: dec,
   lengthOfSinlgeWindBracing: dec,
-  lengthOfSinlgeWindBracingAdditional: dec,
+  lengthOfSinlgeWindBracingAdditional: str,
   totalNumberOfWindBracing: count,
   unitWeightOfRoofWindBracing: dec,
   roofSagRoadValue: dec,
   roofSagRoadQuantity: dec,
   roofSagRoadQuantityAdditional: dec,
   lengthOfSingleSagRoad: dec,
+  lengthOfSingleSagRoadAdditional: str,
   noOfSagRodInASingleFrame: count,
   noOfBayInSagRodProvided: count,
   noOfSagRodInExtendedFrame: count,
@@ -56,7 +58,7 @@ export const quantityPebRoofSchema = z.object({
   unitWeightOfSagRod: dec,
   roofFlangeBraceQuantity: dec,
   lengthOfMidFrameFlangeBrace: dec,
-  lengthOfMidFrameFlangeBraceAdditional: dec,
+  lengthOfMidFrameFlangeBraceAdditional: str,
   noOfFlangeBraceInMidFrame: count,
   noOfFlangeBraceInEndFrame: count,
   noOfMidFrame: count,
@@ -65,16 +67,16 @@ export const quantityPebRoofSchema = z.object({
   noOfExtendedMidFrame: count,
   noOfExtendedEndFrame: count,
   lengthOfEndFrameFlangeBrace: dec,
-  numberOfPurlinBolts: dec,
+  numberOfPurlinBolts: str,
   numberOfPurlinBoltsQuantity: dec,
   noOfPurlinJointInSingleFrame: count,
   totalnoOfFrames: count,
   noOfPurlinnodeInExtendedFrame: count,
   noOfExtendedFrames: count,
   noOfBoltsInSinglePurlinJoint: count,
-  numberOfRoofJointBolts: dec,
-  numberOfFoundationBolts: dec,
-  numberOfAnchorBolts: dec,
+  numberOfRoofJointBolts: str,
+  numberOfFoundationBolts: str,
+  numberOfAnchorBolts: str,
 })
 
 export const quantityCladdingSchema = z.object({
